# authserver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  dev-requirements.in  entrypoint.sh  pyproject.toml  requirements.in  tox.ini
accessmanager/: apps.py  urls.py  views.py
accessmanager/templates/: home.html
authentication/: managers.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/: base.html  home.html  login.html
config/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: dev-requirements.txt  requirements.txt
