[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "authserver"
description = "My own auth server.😋"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = "Brian Kariu", email = "waiganjo.brian@gmail.com"},
]
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "pre-commit",
    "psycopg2-binary"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "tox"    
]

[tool.setuptools_scm]
version_file = "_version.py"